<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>


    <string name="toppings">Toppings</string>
    <string name="whipping_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!!</string>

    <string name="order_summary">Name : <xliff:g example="Nitish" id="name">%s</xliff:g></string>
</resources>
